# pt-RVV-mlir

./: CMakeLists.txt  highlevelnpu.mlir  highlevelnpu_add.mlir  simple_cnn_tosa.mlir  simple_conv2d.mlir  vecscf_add.mlir
drv_mlir/app/: Makefile  main.c  main_fec.c  main_fec_prealloc.c  main_power.c  send_tensor.py
drv_mlir/drv/: Makefile  dmabuf_exp.c  gpio.c  led_drv.c  led_opr.h
include/eot/: CMakeLists.txt  Eot.td  EotDialect.h  EotDialect.td  EotOps.h  EotOps.td  EotPasses.h  EotPasses.td  EotShapeUtils.h
include/npu/: CMakeLists.txt  Npu.td  NpuDialect.h  NpuDialect.td  NpuOps.h  NpuOps.td  NpuPasses.h  NpuPasses.td  NpuTypes.h  NpuTypes.td
kd_file/: fec.h  fec_main.c  mxsfb.c
lib/: CMakeLists.txt  npu.cpp
lib/Conversion/EotToStandard/: CMakeLists.txt  ConvertEotToStandard.cpp
lib/Conversion/TosaCustomToEot/: CMakeLists.txt  ConvertTosaCustomToEot.cpp
lib/Dialect/Eot/: CMakeLists.txt  EotDialect.cpp  EotOps.cpp  EotShapeUtils.cpp
lib/Transforms/: CMakeLists.txt  ConvertNpuToVecScf.cpp  ConvertTosaToNpu.cpp  PlanStaticWorkspace.cpp
lib/Transforms/Eot/: CMakeLists.txt  PlanStaticWorkspace.cpp
mlir_file/: highlevelnpu.mlir  lowlevelNpu.scfvec.mlir  simple_cnn_tosa.mlir  test_lowlevelNpu.mlir
pt_model/: ekf_layer_knet_v33.py  gen_pt_mlir.py  neural_gm_splitcov_v33.py  simple_cnn_model.pt  test_output.py
python/: __init__.py  eot_export_ops.py  eot_frontend_export.py  export_eot_frontend.py  verify_eot_export.py
python/tests/: test_eot_export_ops.py  test_eot_frontend_export.py
scripts/: export_eot_frontend.sh  lower_eot_frontend.sh  run_eot_tests.sh  verify_eot_pipeline.sh
tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
torch-mlir-patches/: README.md  TorchEotCustomToTosa.cpp  TorchEotCustomToTosa.h  apply.py
